[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemies/boss-2.png" type="Texture" id=1]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/boss-2-arms.png" type="Texture" id=3]
[ext_resource path="res://enemies/BOSS2.gd" type="Script" id=4]
[ext_resource path="res://enemies/BossLaser.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/enemiesoof.tres" type="Animation" id=7]

[sub_resource type="Animation" id=1]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "shoot"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -360.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6.16536e-07, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_shooting"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CapsuleShape2D" id=4]
height = 10.0

[node name="BOSS2" instance=ExtResource( 2 )]
script = ExtResource( 4 )
MAX_SPEED = 60

[node name="Laser" parent="." index="0" instance=ExtResource( 5 )]

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="." index="2"]
position = Vector2( 0, 1 )
rotation = -6.28319
texture = ExtResource( 3 )

[node name="muzzle" type="Position2D" parent="Sprite2" index="0"]
position = Vector2( 15, 2.99999 )

[node name="muzzle2" type="Position2D" parent="Sprite2" index="1"]
position = Vector2( -15, 3.00001 )

[node name="AnimationPlayer" parent="." index="4"]
autoplay = "float"
playback_speed = 0.6
anims/float = SubResource( 1 )
anims/shoot = SubResource( 2 )

[node name="Hitbox" parent="." index="5"]
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="EnemyStats" parent="." index="7"]
max_health = 160
health = 160

[node name="Timer" type="Timer" parent="." index="8"]
wait_time = 5.0
autostart = true

[node name="HitPlayer" type="AnimationPlayer" parent="." index="9"]
anims/oof = ExtResource( 7 )

[node name="SpinTimer" type="Timer" parent="." index="10"]
wait_time = 3.0

[node name="ShootTimer" type="Timer" parent="." index="11"]
wait_time = 5.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
